--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@ MiniToon</td>
 </table>
 </main>
 <footer style="text-align:center;color:blue;background-color:black">Адреса:Вул.Віктора 13. телефон:+380966523008</footer>
-<a href="https://www.roblox.com/home">Посилання на гру</a>
+<a href="https://www.roblox.com/home">Посилання на роблокс</a>
 </html>
