--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <link href="style.css"/>
+        <title>Про роблокс</title>
+    </head>
     <body style="background-color:lightblue">
     <title>Проект</title>
     <h1 style="text-align:center;font-size:50px;color:grey;background-color:darkgreen">РОБЛОКС</h1>
