--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link href="style.css"/>
         <title>Про роблокс</title>
     </head>
-    <body style="background-color:lightblue">
+    <body>
     <title>Проект</title>
     <h1 style="text-align:center;font-size:50px;color:grey;background-color:darkgreen">РОБЛОКС</h1>
     <main style="background-color:lightgrey">
