--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <link href="style.css"/>
+        <link rel="stylesheet"
+ href="style.css"/>
         <title>Про роблокс</title>
     </head>
     <body>
